--- a/html/character.html
+++ b/html/character.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" href="/assets/icon.jpg" />
   </head>
   <body>
     <div class="navbar">
@@ -21,13 +22,13 @@
           <a href="../index.html">Home</a>
         </div>
         <div class="lists">
-          <a href="character.html">Character</a>
+          <a href="character.html">Characters</a>
         </div>
         <div class="lists">
           <a href="movies.html">Movies</a>
         </div>
         <div class="lists">
-          <a href="magic toys.html">Magic toys</a>
+          <a href="magic toys.html">Magictoys</a>
         </div>
       </div>
       <div class="navbar__bar">
