--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" href="/assets/logo.png" />
+    <link rel="icon" href="/assets/icon.jpg" />
   </head>
   <body>
     <div class="navbar">
@@ -23,13 +23,13 @@
         </div>
 
         <div class="lists">
-          <a href="/html/character.html">Character</a>
+          <a href="/html/character.html">Characters</a>
         </div>
         <div class="lists">
           <a href="/html/movies.html">Movies</a>
         </div>
         <div class="lists">
-          <a href="/html/magic toys.html ">Magic toys</a>
+          <a href="/html/magic toys.html ">Magictoys</a>
         </div>
       </div>
       <div class="navbar__bar">
