--- a/html/movies.html
+++ b/html/movies.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" href="/assets/icon.jpg" />
+    <link rel="icon" href="../assets/iconlogo.jpg" />
   </head>
   <body>
     <div class="navbar">
