--- a/html/movies.html
+++ b/html/movies.html
@@ -159,5 +159,12 @@
         </div>
       </div>
     </div>
+
+    <script>
+      const addClass = () => {
+        const navbar = document.getElementById("navbar");
+        navbar.classList.toggle("expand");
+      };
+    </script>
   </body>
 </html>
