--- a/html/magic toys.html
+++ b/html/magic toys.html
@@ -13,9 +13,12 @@
     <link rel="icon" href="../assets/iconlogo.jpg" />
   </head>
   <body>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
       <div class="navbar__logo">
         <img src="../assets/logo.png" alt="" />
+      </div>
+      <div class="navbar__bar" onclick="addClass()">
+        <i class="fas fa-bars"></i>
       </div>
       <div class="navbar__lists">
         <div class="lists">
@@ -30,9 +33,6 @@
         <div class="lists">
           <a href="magic toys.html">Magictoys</a>
         </div>
-      </div>
-      <div class="navbar__bar">
-        <i class="fas fa-bars"></i>
       </div>
     </div>
     <div class="magic">
