--- a/html/magic toys.html
+++ b/html/magic toys.html
@@ -126,5 +126,11 @@
         </div>
       </div>
     </div>
+    <script>
+      const addClass = () => {
+        const navbar = document.getElementById("navbar");
+        navbar.classList.toggle("expand");
+      };
+    </script>
   </body>
 </html>
