--- a/html/character.html
+++ b/html/character.html
@@ -110,5 +110,11 @@
         </div>
       </div>
     </div>
+    <script>
+      const addClass = () => {
+        const navbar = document.getElementById("navbar");
+        navbar.classList.toggle("expand");
+      };
+    </script>
   </body>
 </html>
